wacc_examples/valid_TEST/if/ifReturn2.wacc
# if returning on 'else' branch and end of function

# Output:
# correct

# Program:

begin
  int f() is
    if true
    then
      println 1
    else 
      return 2
    fi;
    return 0
  end
  int x = call f() ;
  println x 
end
